Added sceond script which shows reading data from SQL database file

--- a/EDA for Machine Learning/1. ReadingJSONandCSV.ipynb
+++ b/EDA for Machine Learning/1. ReadingJSONandCSV.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "7a74b2dc",
    "metadata": {},
    "outputs": [],
@@ -31,18 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "16e2f714",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vivektandale/miniconda3/envs/ml/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -64,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "3d3e081b",
    "metadata": {},
    "outputs": [],
@@ -82,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "e86ed7e0",
    "metadata": {},
    "outputs": [
@@ -114,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "2003ac73",
    "metadata": {},
    "outputs": [],
@@ -133,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "762c9cb7",
    "metadata": {},
    "outputs": [],
@@ -146,12 +138,12 @@
    "id": "d6cc144c",
    "metadata": {},
    "source": [
-    "'con' is a an pbject which has live connection with the database"
+    "'con' is a an object which has live connection with the database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "370032a9",
    "metadata": {},
    "outputs": [],
@@ -162,17 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "3c3fd4eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Connection at 0x1277e8f40>"
+       "<sqlite3.Connection at 0x1277e87c0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "d3bf1510",
    "metadata": {},
    "outputs": [
@@ -263,7 +255,7 @@
        "4              Kryptonite  3 Doors Down        2000.0         13"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "38f301c4",
    "metadata": {},
    "outputs": [
@@ -411,7 +403,7 @@
        "[908 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "40a81c42",
    "metadata": {},
    "outputs": [
