long break no commits ends now

--- a/2 Machine Learning - Regression/1. Introduction to Supervised ML.ipynb
+++ b/2 Machine Learning - Regression/1. Introduction to Supervised ML.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "id": "6321661c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "id": "ea14bbe8",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "id": "0061e58d",
    "metadata": {},
    "outputs": [
@@ -71,16 +71,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-07-27 22:17:29--  https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-ML240EN-SkillsNetwork/labs/data/boston_housing_clean.pickle\n",
+      "--2025-07-31 22:39:47--  https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-ML240EN-SkillsNetwork/labs/data/boston_housing_clean.pickle\n",
       "Resolving cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)... 169.45.118.108\n",
       "Connecting to cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)|169.45.118.108|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 60056 (59K) [binary/octet-stream]\n",
-      "Saving to: ‘boston_housing_clean.pickle.2’\n",
+      "Saving to: ‘boston_housing_clean.pickle’\n",
       "\n",
-      "boston_housing_clea 100%[===================>]  58.65K   165KB/s    in 0.4s    \n",
+      "boston_housing_clea 100%[===================>]  58.65K   174KB/s    in 0.3s    \n",
       "\n",
-      "2025-07-27 22:17:31 (165 KB/s) - ‘boston_housing_clean.pickle.2’ saved [60056/60056]\n",
+      "2025-07-31 22:39:49 (174 KB/s) - ‘boston_housing_clean.pickle’ saved [60056/60056]\n",
       "\n"
      ]
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "id": "fd934c59",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "id": "67218d74",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "9     15.2  386.71  17.10  18.9  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "id": "496a3fbf",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "\"Boston House Prices dataset\\n===========================\\n\\nNotes\\n------\\nData Set Characteristics:  \\n\\n    :Number of Instances: 506 \\n\\n    :Number of Attributes: 13 numeric/categorical predictive\\n    \\n    :Median Value (attribute 14) is usually the target\\n\\n    :Attribute Information (in order):\\n        - CRIM     per capita crime rate by town\\n        - ZN       proportion of residential land zoned for lots over 25,000 sq.ft.\\n        - INDUS    proportion of non-retail business acres per town\\n        - CHAS     Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)\\n        - NOX      nitric oxides concentration (parts per 10 million)\\n        - RM       average number of rooms per dwelling\\n        - AGE      proportion of owner-occupied units built prior to 1940\\n        - DIS      weighted distances to five Boston employment centres\\n        - RAD      index of accessibility to radial highways\\n        - TAX      full-value property-tax rate per $10,000\\n        - PTRATIO  pupil-teacher ratio by town\\n        - B        1000(Bk - 0.63)^2 where Bk is the proportion of blacks by town\\n        - LSTAT    % lower status of the population\\n        - MEDV     Median value of owner-occupied homes in $1000's\\n\\n    :Missing Attribute Values: None\\n\\n    :Creator: Harrison, D. and Rubinfeld, D.L.\\n\\nThis is a copy of UCI ML housing dataset.\\nhttp://archive.ics.uci.edu/ml/datasets/Housing\\n\\n\\nThis dataset was taken from the StatLib library which is maintained at Carnegie Mellon University.\\n\\nThe Boston house-price data of Harrison, D. and Rubinfeld, D.L. 'Hedonic\\nprices and the demand for clean air', J. Environ. Economics & Management,\\nvol.5, 81-102, 1978.   Used in Belsley, Kuh & Welsch, 'Regression diagnostics\\n...', Wiley, 1980.   N.B. Various transformations are used in the table on\\npages 244-261 of the latter.\\n\\nThe Boston house-price data has been used in many machine learning papers that address regression\\nproblems.   \\n     \\n**References**\\n\\n   - Belsley, Kuh & Welsch, 'Regression diagnostics: Identifying Influential Data and Sources of Collinearity', Wiley, 1980. 244-261.\\n   - Quinlan,R. (1993). Combining Instance-Based and Model-Based Learning. In Proceedings on the Tenth International Conference of Machine Learning, 236-243, University of Massachusetts, Amherst. Morgan Kaufmann.\\n   - many more! (see http://archive.ics.uci.edu/ml/datasets/Housing)\\n\""
       ]
      },
-     "execution_count": 115,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "id": "593f19ef",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "id": "9c8381e0",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "id": "76133042",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "id": "0ecd0b6b",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "id": "09d7f228",
    "metadata": {},
    "outputs": [],
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "id": "10e9c9c0",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "id": "e06afdf0",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
        "NormaltestResult(statistic=np.float64(17.21801696640698), pvalue=np.float64(0.00018245472768345196))"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "id": "a7d3e449",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "id": "e5d42bc5",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "id": "0c445601",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "id": "b12ae6a0",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
        "NormaltestResult(statistic=np.float64(20.487090826863067), pvalue=np.float64(3.558645701429252e-05))"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "id": "35147744",
    "metadata": {},
    "outputs": [],
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "id": "da2277d3",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "id": "082658d9",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "id": "72efaf88",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "id": "e6486b4a",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 23,
    "id": "2cbcbc65",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
        "NormaltestResult(statistic=np.float64(4.513528737272365), pvalue=np.float64(0.10468867128449004))"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "id": "b1d9c232",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
    "id": "fb09cc5a",
    "metadata": {},
    "outputs": [],
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 26,
    "id": "4e0e7105",
    "metadata": {},
    "outputs": [],
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 27,
    "id": "7bd5ba00",
    "metadata": {},
    "outputs": [],
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 28,
    "id": "9ea36e3f",
    "metadata": {},
    "outputs": [],
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 29,
    "id": "b54deee7",
    "metadata": {},
    "outputs": [],
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 30,
    "id": "e98cf5fd",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 31,
    "id": "6be4a05c",
    "metadata": {},
    "outputs": [],
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 32,
    "id": "e477ca7b",
    "metadata": {},
    "outputs": [],
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 33,
    "id": "201701dd",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
        "array([24. , 21.6, 34.7, 33.4, 36.2, 28.7, 22.9, 27.1, 16.5, 18.9])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 34,
    "id": "09dc42e7",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1025,7 @@
        "array([24. , 21.6, 34.7, 33.4, 36.2, 28.7, 22.9, 27.1, 16.5, 18.9])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 35,
    "id": "3c90e3b8",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
        "0.8256803385795184"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 36,
    "id": "e12c8082",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1081,7 @@
        "0.8001111380647437"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
