Polynomial Regressions added

--- a/2 Machine Learning - Regression/3. Training and Test Splits.ipynb
+++ b/2 Machine Learning - Regression/3. Training and Test Splits.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "817ad78a",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "08e3c2f5",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "'/Users/vivektandale/Developer/IBM Machine Learning/2 Machine Learning - Regression'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "19365f9c",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "7304226c",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "e1bd0b55",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "79d73665",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "6d3280d2",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "np.int64(258)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "627c0612",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "e6673c34",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
        "215"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "id": "1066d6fb",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "fa922c74",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "47ca7988",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
        "np.True_"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "9604e70a",
    "metadata": {},
    "outputs": [
@@ -1422,7 +1422,7 @@
        "[965 rows x 36 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "d024568f",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
        "test   1.372182e+09  8.065328e+09"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "id": "05293fb5",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "id": "75101fe5",
    "metadata": {},
    "outputs": [
@@ -1625,9 +1625,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 67,
+   "cell_type": "markdown",
    "id": "84e04035",
+   "metadata": {},
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set_context('talk')\n",
+    "sns.set_style('ticks')\n",
+    "sns.set_palette('dark')\n",
+    "\n",
+    "ax = plt.axes()\n",
+    "# we are going to use y_test, y_test_pred\n",
+    "ax.scatter(y_test, y_test_pred, alpha=.5)\n",
+    "\n",
+    "ax.set(xlabel='Ground truth', \n",
+    "       ylabel='Predictions',\n",
+    "       title='Ames, Iowa House Price Predictions vs Truth, using Linear Regression');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8a90706e",
    "metadata": {},
    "outputs": [
     {
@@ -1657,6 +1678,14 @@
     "       ylabel='Predictions',\n",
     "       title='Ames, Iowa House Price Predictions vs Truth, using Linear Regression');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4cd36bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
